--- a/src/product.css
+++ b/src/product.css
@@ -10,6 +10,13 @@
     min-width: 100px;
     background-color: white;
     z-index: 1;
+    border-radius: 5px;
+  }
+  .product:hover{
+    box-shadow: 0px 0px 10px 0px rgb(194, 194, 194);
+    transform: scale(1.002);
+    transition: all 0.2s;
+    cursor: pointer;
   }
 
   .productRating {
@@ -25,7 +32,10 @@
   
   .product > button {
     background: #f0c14b;
-    border: 1px solid;
+    border: 1px solid white;
+    /* border: none; */
+    padding: 10px;
+    border-radius: 4px;
     margin-top: 10px;
     border-color: #a88734 #9c7e31 #846a29;
     color: #111;
@@ -42,6 +52,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     /* align-self: flex-start; */
     height: 100px;
     margin-bottom: 15px;
